# CSCA5522_Data_Mining_Project

./: .gitignore
.claude/: settings.local.json
crypto_anomaly/: .env.example  README.md  pyproject.toml  requirements.txt
crypto_anomaly/app/: streamlit_app.py
crypto_anomaly/app/pages/: 1_Data_Management.py  2_Training.py  3_Evaluation.py  4_Live_Detection.py
crypto_anomaly/config/: settings.py
crypto_anomaly/data/raw/: avaxusdt.parquet  btcusdt.parquet  ethusdt.parquet  linkusdt.parquet  solusdt.parquet
crypto_anomaly/flows/: __init__.py  data_collection.py
crypto_anomaly/infrastructure/: Dockerfile  Dockerfile.mlflow  docker-compose.yml  init.sql
crypto_anomaly/src/: __init__.py
crypto_anomaly/src/data/: __init__.py  collector.py  database.py
crypto_anomaly/src/evaluation/: __init__.py  metrics.py
crypto_anomaly/src/features/: __init__.py  registry.py
crypto_anomaly/src/models/: __init__.py  base.py  gmm.py  kmeans.py  trainer.py
crypto_anomaly/src/streaming/: __init__.py  inference.py
crypto_anomaly/tests/: test_core.py  test_features.py  test_models.py
